--- a/relatorio/v1.tex
+++ b/relatorio/v1.tex
@@ -27,8 +27,8 @@ consola ou para um ficheiro o valor presente em cada contador.
 \begin{listing}[H]
 \centering
 \begin{minted}{text}
-Verts	         Edges	          Cmps	        Allocs
-  104	            15	           104	            85
+            Verts	         Edges	          Cmps
+SWtinyDAG:    104	            15	           104
 \end{minted}
 \caption{Contadores no final da execução do primeiro algoritmo}
 \end{listing}
@@ -57,7 +57,7 @@ para grafos "sequenciais"}
 \end{listing}
 
 Para, de modo experimental, calcular a complexidade do algoritmo,
-podemos fazer $T(2N) / T(N)$ para uma dada métrica, de modo a
+podemos calcular o coeficiente entre $T(2N)$ e $T(N)$ para uma dada métrica, de modo a
 estimar a sua classe de eficiência.
 
 Em cada um dos casos da tabela obtida, o quociente da divisão
@@ -66,7 +66,80 @@ número de vértices em cada grafo. Como tal, podemos concluir que
 a ordem de complexidade do algoritmo para o tipo de grafos em
 causa será aproximadamente $\mathcal{O}(n^2)$
 
+Note-se também que o número de comparações efetuadas é igual ao
+número de vértices visitados, conclusão que é algo relativamente
+óbvio de compreender, uma vez que por cada vértice que visitamos
+temos que verificar se o seu \verb|InDegree| é 0, ou se o vértice
+já foi marcado.
+
+Contudo, a experiência realizada não nos permite concluir se o
+número de arestas de saída em cada vértice possui algum impacto
+no número de vértices visitado. Para tal, realizemos a mesma
+experiência, só que agora cada vértice $i$ possui uma aresta para
+o vértice $i + 1$ e para o vértice $i + 2$.
+
+\begin{listing}[H]
+\centering
+\begin{minted}{text}
+                    Verts	         Edges	          Cmps
+1024 vértices:     526850	          2046	        526850
+2048 vértices:    2102274	          4094	       2102274
+4096 vértices:    8398850	          8190	       8398850
+8192 vértices:   33574914	         16382	      33574914
+16384 vértices: 134258690	         32766	     134258690
+\end{minted}
+\caption{Contadores no final da execução do primeiro algoritmo
+para grafos "sequenciais"}
+\end{listing}
+
+O número de vértices visitados é igual, tal como o número de
+comparações efetuadas. A diferença, como seria de esperar, reside
+apenas no número de arestas visitadas. Como todos os vértices
+possuem agora um \verb|InDegree| de 2, exceto os 2 primeiros
+vértices, então o número de arestas visitadas corresponde ao
+número de arestas existentes no grafo. Como tal, podemos concluir
+que o número de arestas não afeta o número de vértices visitados.
+
 \subsection{Análise Formal}
 
 Façamos então uma análise formal do caso anterior, de modo a
 verificar se a conclusão obtida é verídica ou não.
+
+
+Sabemos que o algorítmo percorre, até que não haja vértices
+restantes, todos os vértices de modo
+sequencial até encontrar um vértice não visitado cujo
+\verb|InDegree|, e que por cada vértice válido encontrado, irá
+iterar por todas as suas arestas de saída.
+
+Iterar até que não haja mais vértices restantes é uma operação de
+ordem linear (Iremos ter que iterar todos os vértices).
+
+A cada nova iteração, temos que selecionar um novo vértice
+válido, ou seja, não marcado e cujo \verb|InDegree| seja 0. Isto
+involve, no pior dos casos, iterar todos os vértices uma vez
+mais.
+
+Por fim, após a seleção de um vértice válido, iremos ter que
+iterar por todas as suas arestas de saída. Note-se que isto
+resulta em percorrer todas as arestas do grafo.
+
+Consideremos então V como sendo o número de vértices do grafo, e
+E como sendo o númerp de arestas exeistentes no grafo. Traduzindo o referido anteriormente num somatório, obtemos:
+
+\begin{listing}[H]
+\begin{align}
+  & \sum_{i = 0}^{V} \sum_{j=0}^{V} (1 + \sum_{k=0}^{deg(v)}) =
+  \\
+  & \sum_{i = 0}^{V} \sum_{j=0}^{V} 1 + \sum_{j=0}^{V}
+  \sum_{k=0}^{deg(v)} \\
+  & \sum_{i=0}^{V} (V + E) \\
+  & V(V+E)
+\end{align}
+\caption{Complexidade do pior caso}
+\end{listing}
+
+Como tal, calculámos o número de iterações realizado no pior dos
+casos do algorítmo e podemos concluir que a sua complexidade é
+$\mathcal{O}(V(V+E))$, equivalente a $\mathcal{O}(V^2+(V \cdot
+E))$
