--- a/relatorio/v1.tex
+++ b/relatorio/v1.tex
@@ -1,14 +1,14 @@
-\section{Primeira versão}
+\chapter{Primeira versão}
 Comecemos por analisar, quanto ao número de vértices visitados, o 1º algoritmo desenvolvido, que utiliza
 uma cópia do grafo original para calcular a sua ordenação
-topológica. 
+topológica.
 
 O algoritmo começa por percorrer todos os vértices até encontrar
 um que ainda não tenha sido marcado e cujo \verb|InDegree| seja
-0. 
+0.
 
 
-\subsection{Análise Informal}
+\section{Análise Informal}
 
 Para realizar a análise informal do algorítmo, necessitamos de
 contadores que registem as métricas adotadas. Analisando do
@@ -25,12 +25,12 @@ No final da execução do programa, teremos que imprimir para a
 consola ou para um ficheiro o valor presente em cada contador.
 
 \begin{listing}[H]
-\centering
-\begin{minted}{text}
+	\centering
+	\begin{minted}{text}
             Verts	         Edges	          Cmps
 SWtinyDAG:    104	            15	           104
-\end{minted}
-\caption{Contadores no final da execução do primeiro algoritmo}
+  \end{minted}
+	\caption{Contadores no final da execução do primeiro algoritmo}
 \end{listing}
 
 Contudo, para tirar alguma conclusão significativa, teremos que
@@ -43,17 +43,17 @@ Vejamos então o resultado para tais grafos com diferente número
 de vértices
 
 \begin{listing}[H]
-\centering
-\begin{minted}{text}
+	\centering
+	\begin{minted}{text}
                     Verts	         Edges	          Cmps
 1024 vértices:     526850	          1024	        526850
 2048 vértices:    2102274	          2048	       2102274
 4096 vértices:    8398850	          4096	       8398850
 8192 vértices:   33574914	          8192	      33574914
 16384 vértices: 134258690	         16384	     134258690
-\end{minted}
-\caption{Contadores no final da execução do primeiro algoritmo
-para grafos "sequenciais"}
+  \end{minted}
+	\caption{Contadores no final da execução do primeiro algoritmo
+		para grafos "sequenciais"}
 \end{listing}
 
 Para, de modo experimental, calcular a complexidade do algoritmo,
@@ -79,17 +79,17 @@ experiência, só que agora cada vértice $i$ possui uma aresta para
 o vértice $i + 1$ e para o vértice $i + 2$.
 
 \begin{listing}[H]
-\centering
-\begin{minted}{text}
+	\centering
+	\begin{minted}{text}
                     Verts	         Edges	          Cmps
 1024 vértices:     526850	          2046	        526850
 2048 vértices:    2102274	          4094	       2102274
 4096 vértices:    8398850	          8190	       8398850
 8192 vértices:   33574914	         16382	      33574914
 16384 vértices: 134258690	         32766	     134258690
-\end{minted}
-\caption{Contadores no final da execução do primeiro algoritmo
-para grafos "sequenciais"}
+  \end{minted}
+	\caption{Contadores no final da execução do primeiro algoritmo
+		para grafos "sequenciais"}
 \end{listing}
 
 O número de vértices visitados é igual, tal como o número de
@@ -100,7 +100,7 @@ vértices, então o número de arestas visitadas corresponde ao
 número de arestas existentes no grafo. Como tal, podemos concluir
 que o número de arestas não afeta o número de vértices visitados.
 
-\subsection{Análise Formal}
+\section{Análise Formal}
 
 Façamos então uma análise formal do caso anterior, de modo a
 verificar se a conclusão obtida é verídica ou não.
@@ -128,18 +128,18 @@ Consideremos então V como sendo o número de vértices do grafo, e
 E como sendo o númerp de arestas exeistentes no grafo. Traduzindo o referido anteriormente num somatório, obtemos:
 
 \begin{listing}[H]
-\begin{align}
-  & \sum_{i = 0}^{V} \sum_{j=0}^{V} (1 + \sum_{k=0}^{deg(v)}) =
-  \\
-  & \sum_{i = 0}^{V} \sum_{j=0}^{V} 1 + \sum_{j=0}^{V}
-  \sum_{k=0}^{deg(v)} \\
-  & \sum_{i=0}^{V} (V + E) \\
-  & V(V+E)
-\end{align}
-\caption{Complexidade do pior caso}
+	\begin{align}
+		 & \sum_{i = 0}^{V} \sum_{j=0}^{V} (1 + \sum_{k=0}^{deg(v)}) =
+		\\
+		 & \sum_{i = 0}^{V} \sum_{j=0}^{V} 1 + \sum_{j=0}^{V}
+		\sum_{k=0}^{deg(v)}                                            \\
+		 & \sum_{i=0}^{V} (V + E)                                      \\
+		 & V(V+E)
+	\end{align}
+	\caption{Complexidade do pior caso}
 \end{listing}
 
 Como tal, calculámos o número de iterações realizado no pior dos
 casos do algorítmo e podemos concluir que a sua complexidade é
 $\mathcal{O}(V(V+E))$, equivalente a $\mathcal{O}(V^2+(V \cdot
-E))$
+	E))$
