--- a/relatorio/main.tex
+++ b/relatorio/main.tex
@@ -9,12 +9,16 @@
 \membro{Igor coelho}{113532}
 \membro{João Capucho}{113713}
 
+\newmintinline{c}{}
+\newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
+
 \usepackage{lmodern}
 
 \begin{document}
 
 \maketitle
 \input{v1}
+
 \input{v2}
 
 \end{document}
