Changed wording on report to mean the correct thing

--- a/relatorio/v1.tex
+++ b/relatorio/v1.tex
@@ -56,8 +56,7 @@ de vértices
 \end{listing}
 
 Para, de modo experimental, calcular a complexidade do algoritmo,
-% coeficiente? divisão?
-podemos calcular o coeficiente entre $T(2N)$ e $T(N)$ para uma dada métrica,
+podemos calcular o quociente entre $T(2N)$ e $T(N)$ para uma dada métrica,
 de modo a estimar a sua classe de eficiência.
 
 Em cada um dos casos da tabela obtida, à exceção do número de arestas
