--- a/relatorio/v2.tex
+++ b/relatorio/v2.tex
@@ -48,7 +48,7 @@ Comparando os resultados das listagem \ref{2-1} com \ref{1-2} e da \ref{2-2} com
 \ref{1-3}, podemos concluir que de facto a performance dos algoritmos nas
 métricas selecionadas é bastante semelhante.
 
-Uma vez mais, ao calcular o coeficiente de $T(2N)$ por $T(N)$, voltamos a obter
+Uma vez mais, ao calcular o quociente de $T(2N)$ por $T(N)$, voltamos a obter
 aproximadamente 4, resultando numa complexidade quadrática para o algoritmo,
 onde o número de arestas presente no grafo tem impacto no número de iterações
 realizadas, mas não no número de vértices visitados.
