--- a/relatorio/v1.tex
+++ b/relatorio/v1.tex
@@ -115,7 +115,7 @@ pelos vértices para verificar se cumprem as condições.
 
 Como por cada vértice válido encontrado, ou seja, não marcado e cujo
 \cinline{inDegree} seja 0, teremos que reiniciar a pesquisa, no pior caso
-teremos que iterar todos os vértices menos o número de vértices já marcados, 
+teremos que iterar todos os vértices menos o número de vértices já marcados,
 que aumenta por 1 unidade a cada iteração.
 
 Além disso, para cada vértice válido, vamos ter de iterar por todas as suas
@@ -128,12 +128,18 @@ somatório, obtemos:
 
 \begin{listing}[H]
 	\begin{align}
-		  & \sum_{i = 1}^{\norm{V}} \; \sum_{v=1}^{\norm{V - marked}}
-		\left( 1 + \sum_{k=1}^{deg^+(v)} 1 \right)             \\
-		= & \sum_{i = 1}^{\norm{V}} \; \sum_{v=1}^{\norm{V - marked}} 1
-		+ \sum_{v=1}^{\norm{V}} \sum_{k=1}^{deg^+(v)} 1        \\
-    = & \sum_{i=0}^{V} (\frac{\norm{V}+1}{2} + E)                             \\
-    = & V(\frac{V+1}{2}+E)
+		  & \sum_{i = 1}^{\norm{V}} \; \sum_{v=1}^{\norm{V} - i + 1}
+		\left( 1 + \sum_{k=1}^{deg^+(v)} 1 \right)                          \\
+		= & \sum_{i = 1}^{\norm{V}} (\norm{V} - i + 1)
+		+ \sum_{v=1}^{\norm{V}} \sum_{k=1}^{deg^+(v)} 1                     \\
+		= & \sum_{i=1}^{\norm{V}} \norm{V} - \sum_{i=1}^{\norm{V}} i
+		+ \sum_{i=1}^{\norm{V}} 1 + \sum_{i=1}^{\norm{V}} \norm{E}          \\
+		= & \norm{V}^2 - \frac{\norm{V} \cdot (\norm{V} + 1)}{2} + \norm{V}
+		+ \norm{V} \cdot \norm{E}                                           \\
+		= & \norm{V} \cdot \left(
+		\norm{V} - \frac{\norm{V} + 1}{2} + 1 + \norm{E}
+		\right)                                                             \\
+		= & \norm{V} \cdot \left( \frac{\norm{V} + 1}{2} + \norm{E} \right)
 	\end{align}
 	\caption{Complexidade do pior caso}
 \end{listing}
@@ -142,7 +148,7 @@ Como tal, calculámos o número de iterações realizado no pior dos
 casos do algoritmo e podemos concluir que a sua complexidade é
 $\mathcal{O}\left(\norm{V} \cdot \left[ \frac{\norm{V}+1}{2} + \norm{E} \right] \right)$,
 equivalente a
-$\mathcal{O}\left(\frac{\norm{V}^2 + \norm{V}}{2} \cdot \norm{E} \right)$
+$\mathcal{O}\left(\frac{\norm{V}^2 + \norm{V}}{2} + \norm{V} \cdot \norm{E} \right)$
 
 Note-se que para calcular o número de vértices visitados, teríamos apenas que
 omitir a iteração pelas arestas de cada vértice.
