relatorio: v1 and v2 fixes

--- a/relatorio/v1.tex
+++ b/relatorio/v1.tex
@@ -146,9 +146,7 @@ somatório, obtemos:
 
 Como tal, calculámos o número de iterações realizado no pior dos
 casos do algoritmo e podemos concluir que a sua complexidade é
-$\mathcal{O}\left(\norm{V} \cdot \frac{\norm{V}+1}{2} + \norm{E} \right)$,
-equivalente a
-$\mathcal{O}\left(\frac{\norm{V}^2 + \norm{V}}{2} + \norm{E} \right)$
+$\mathcal{O}\left( \norm{V}^2 + \norm{E} \right)$.
 
 Note-se que para calcular o número de vértices visitados, teríamos apenas que
 omitir a iteração pelas arestas de cada vértice.
