--- a/relatorio/v2.tex
+++ b/relatorio/v2.tex
@@ -63,5 +63,5 @@ caso para este segundo algoritmo são iguais aos do primeiro
 algoritmo.
 
 Como tal, podemos afirmar que o melhor caso é $B(V, E) = \norm{V}$,
-e o pior caso é $W(V,E) = \norm{V} \cdot \left(\norm{V} + \norm{E}\right)$,
+e o pior caso é $W(V,E) = \frac{\norm{V}^2 + \norm{V}}{2} + \norm{E}$,
 sendo $V$ o conjunto de vértices do grafo e $E$ o conjunto de arestas.
