--- a/relatorio/main.tex
+++ b/relatorio/main.tex
@@ -14,11 +14,18 @@
 
 \usepackage{lmodern}
 
+\usepackage{float}
+
+\newfloat{formula}{thp}{loformula}[chapter]
+\floatname{formula}{Fórmula}
+
 \begin{document}
 
 \maketitle
 \input{v1}
 
 \input{v2}
+
+\input{v3}
 
 \end{document}
